--- a/01_LEARN_VUE3/02_Vue3基本指令/02_基本指令-v-once.html
+++ b/01_LEARN_VUE3/02_Vue3基本指令/02_基本指令-v-once.html
@@ -7,32 +7,30 @@
 </head>
 <body>
 <div id="app"></div>
+
+
+<template id="my-app">
+	<div>
+		<h3>{{ counter }}</h3>
+		<h3 v-once>{{ counter }}</h3>
+		<button @click="increment">+</button>
+	</div>
+</template>
+
 </body>
-<script >
+
+<script>
 	Vue.createApp({
-		template: `
-
-			<div>
-				<h3>{{ message }}</h3>
-				<h2>{{ counter }}</h2>
-				<button @click="increment">+1</button>
-				<button @click="decrement">-1</button>
-			</div>
-
-
-		`,
+		template: `#my-app`,
 		data: function () {
 			return {
 				message: '你好全世界',
-				counter: 100
+				counter: 0
 			}
 		},
 		methods: {
 			increment() {
-				this.counter += 1
-			},
-			decrement() {
-				this.counter -= 1
+				this.counter++
 			}
 		}
 	}).mount('#app')
