--- a/TS/2-chapter/重载/index.html
+++ b/TS/2-chapter/重载/index.html
@@ -9,5 +9,6 @@
 <body>
   
 </body>
-<script src="src/index.ts"></script>
+<!-- <script src="src/index.ts"></script> -->
+<script src="src/ArrayList.ts"></script>
 </html> 
