--- a/TS/2-chapter/重载/index.html
+++ b/TS/2-chapter/重载/index.html
@@ -10,5 +10,6 @@
   
 </body>
 <!-- <script src="src/index.ts"></script> -->
-<script src="src/ArrayList.ts"></script>
+<!-- <script src="src/ArrayList.ts"></script> -->
+<script src="src/chart.ts"></script>
 </html> 
