--- a/TS/2-chapter/类的继承/index.html
+++ b/TS/2-chapter/类的继承/index.html
@@ -11,6 +11,7 @@
 </body>
 <!-- <script src="src/原型链继承.js"></script> -->
 <!-- <script src="src/冒充对象继承.js"></script> -->
-<script src="src/借用构造函数+原型链继承.js"></script>
+<!-- <script src="src/借用构造函数+原型链继承.js"></script> -->
+<script src="src/寄生继承.js"></script>
 
 </html> 
