--- a/TS/2-chapter/类的继承/index.html
+++ b/TS/2-chapter/类的继承/index.html
@@ -13,6 +13,8 @@
 <!-- <script src="src/冒充对象继承.js"></script> -->
 <!-- <script src="src/借用构造函数+原型链继承.js"></script> -->
 <!-- <script src="src/寄生继承.js"></script> -->
-<script src="src/AllVechile.ts"></script>
+<!-- <script src="src/AllVechile.ts"></script> -->
+<!-- <script src="src/06-setPrototypeOf的使用-2.js"></script> -->
+<script src="src/07-静态方法的继承.js"></script>
 
 </html> 
