公有，私有，被保护属性

--- a/TS/4-chapter/Tutorials/index.html
+++ b/TS/4-chapter/Tutorials/index.html
@@ -7,7 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-  
+
 </body>
-<script src="src/基础类型/4-枚举.ts"></script>
-</html> 
+<script src="src/类/3-公有属性.ts"></script>
+</html>
