--- a/Design_Mode  /构造器模式/构造器模式.html
+++ b/Design_Mode  /构造器模式/构造器模式.html
@@ -29,12 +29,14 @@
 
 避免重复复制冗余代码，只传递不同的参数即可
 
+缺点：需要重复开辟内存空间
  */
 
 function Employee(name, age) {
 	this.name = name
 	this.age = age
 
+	// 缺点：这个是公共方法，每次都会重复创建
 	this.say = function () {
 		console.log(`${this.name}-${this.age}`)
 	}
