抽象工厂模式

--- a/Design_Mode  /工厂模式/工厂模式.html
+++ b/Design_Mode  /工厂模式/工厂模式.html
@@ -14,7 +14,12 @@
 		工厂模式
 		由一个工厂对象决定创建某一种产品对象类的实例，主要用来创建同一类对象
 
+		简单工厂模式的优点：
+			只需要一个正确的参数，就可以获取到所需要的对象，而无需要知道其创建的具体细节
+		但是在函数内包含了所有对象的创建逻辑和判断逻辑代码，每增加新的构造函数还需要修改判断逻辑代码
+		当我们的对象不是3个而是10个或者更多，这个函数会成为一个庞大的超级函数，难以维护。
 
+		简单工厂模式用于创建对象数量较少，对象的创建逻辑不复杂时使用
 	*/
 
 
